Made significant changes in product details

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calley - Intelligent Sales Automation</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Guerret:wght@500&display=swap" rel="stylesheet">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -16,8 +17,8 @@
                         neutral: '#F3F4F6',
                     },
                     fontFamily: {
-                        sans: ['Poppins', 'sans-serif'],
-                        serif: ['Playfair Display', 'serif'],
+                        sans: ['Guerret', 'sans-serif'],
+                        serif: ['Guerret', 'serif'],
                     },
                 },
             },
@@ -25,10 +26,10 @@
     </script>
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Guerret', sans-serif;
         }
         .playfair {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Guerret', serif;
         }
         .hero-bg {
             background-image: url('https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
@@ -56,12 +57,12 @@
     </header>
 
     <main>
-        <!-- Hero Section -->
+   
         <section class="hero-bg relative">
             <div class="overlay absolute inset-0"></div>
             <div class="container mx-auto px-6 py-32 relative z-10 text-center text-white">
-                <h1 class="text-6xl font-bold mb-6 playfair">Revolutionize Your Sales with AI</h1>
-                <p class="text-2xl mb-10 max-w-2xl mx-auto">Automate outreach, qualify leads, and boost sales 24/7 with our intelligent bot.</p>
+                <h1 class="text-6xl font-bold mb-6 playfair">Revolutionize grunt cold calling with AI</h1>
+                <p class="text-2xl mb-10 max-w-2xl mx-auto">Automate Sales,HR,Recruitement,Outreach and Customer support with our software.</p>
                 <a href="https://forms.office.com/Pages/DesignPageV2.aspx?prevorigin=Marketing&origin=RevampFRE&subpage=design&id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAO__Xs3Cu9UM1pLMERaRVNBRFU5RjJPUklWMEFSWUlKSS4u" class="bg-white text-primary px-8 py-3 rounded-full text-lg font-semibold hover:bg-neutral transition duration-300 inline-block">Join Waitlist</a>
             </div>
         </section>
@@ -89,8 +90,8 @@
                         <div class="mb-6">
                             <img src="https://cdn-icons-png.flaticon.com/512/4727/4727424.png" alt="Lead Qualification" class="w-24 h-24 mx-auto">
                         </div>
-                        <h3 class="text-xl font-semibold mb-4">Intelligent Lead Qualification</h3>
-                        <p class="text-gray-600">Automatically identify and prioritize the most promising leads.</p>
+                        <h3 class="text-xl font-semibold mb-4">Generate report from insights.</h3>
+                        <p class="text-gray-600">Automatically identify and prioritize the most promising leads after a conversation with them.</p>
                     </div>
                     <div class="text-center">
                         <div class="mb-6">
@@ -110,7 +111,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <div class="bg-white p-8 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-semibold mb-4 text-primary">Increase Efficiency</h3>
-                        <p class="text-gray-600">Our AI bot works tirelessly, making hundreds of calls, maximizing your team's productivity.</p>
+                        <p class="text-gray-600">Our AI software works tirelessly, making hundreds of calls, maximizing your team's productivity.</p>
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-semibold mb-4 text-primary">Qualify Leads Faster</h3>
@@ -119,10 +120,12 @@
                     <div class="bg-white p-8 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-semibold mb-4 text-primary">Reduce Costs</h3>
                         <p class="text-gray-600">Automate repetitive tasks and cut operational costs significantly.</p>
+                        <p class="text-gray-600">Makes the need of recording all business calls redundant.</p>
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-semibold mb-4 text-primary">Scale Your Outreach</h3>
                         <p class="text-gray-600">Grow your sales efforts exponentially without increasing your team size.</p>
+                        <p class="text-gray-600">Identify promising leads from generated report and direct the deal closure to sales team.</p>
                     </div>
                 </div>
             </div>
