--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <img src="https://cdn-icons-png.flaticon.com/512/3616/3616961.png" alt="24/7 Calling" class="w-24 h-24 mx-auto">
                         </div>
                         <h3 class="text-xl font-semibold mb-4">24/7 Automated Calling</h3>
-                        <p class="text-gray-600">Never miss an opportunity with round-the-clock outreach capabilities.</p>
+                        <p class="text-gray-600">Never miss an opportunity with round-the-clock outreach capabilities. You can handle both local and international customers with our solution with minimal human resources.</p>
                     </div>
                     <div class="text-center">
                         <div class="mb-6">
